# swagger.json
@@ -1,4 +1,5 @@
 {
+  "swagger": "2.0",
   "openapi": "3.0.0",
   "info": {
     "title": "API REST de prueba",
@@ -7,10 +8,32 @@
   },
   "servers": [
     {
-      "url": "https://test-swagger-cibertec.herokuapp.com"
+      "url": "https://test-swagger-cibertec.herokuapp.com/"
     }
   ],
   "paths": {
+    "/date": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "fecha",
+            "in": "body",
+            "description": "Fecha cualquiera",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "fecha": {
+                  "type": "string",
+                  "example": "22/09/2022"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/usuario": {
       "post": {
         "description": "",
